--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -53,10 +53,19 @@
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e9g-vw-YfA">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="72" width="266" height="69"/>
+                                    <rect key="frame" x="16" y="54" width="266" height="69"/>
+                                </variation>
+                            </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tQI-fT-i6U">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="110" width="248" height="39"/>
                                 </variation>
                             </label>
                         </subviews>
@@ -68,6 +77,7 @@
                                 <exclude reference="jWm-yH-LqM"/>
                                 <exclude reference="WFf-fQ-0dv"/>
                                 <exclude reference="e9g-vw-YfA"/>
+                                <exclude reference="tQI-fT-i6U"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -77,6 +87,7 @@
                                 <include reference="jWm-yH-LqM"/>
                                 <include reference="WFf-fQ-0dv"/>
                                 <include reference="e9g-vw-YfA"/>
+                                <include reference="tQI-fT-i6U"/>
                             </mask>
                         </variation>
                     </view>
@@ -85,6 +96,7 @@
                         <outlet property="enterNameTextField" destination="Dwh-qt-R7Z" id="tT3-RX-9ta"/>
                         <outlet property="mailButton" destination="WFf-fQ-0dv" id="5eC-U5-bsw"/>
                         <outlet property="messageLabel" destination="e9g-vw-YfA" id="RGD-5o-JDj"/>
+                        <outlet property="nameLabel" destination="tQI-fT-i6U" id="mDe-xi-ShG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -103,24 +115,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SagradaFamilia.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="86x-YL-Z60">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SagradaFamilia.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="jkg-td-Qj6">
+                                <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="600"/>
+                                    <rect key="frame" x="-147" y="48" width="600" height="600"/>
                                 </variation>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="86x-YL-Z60"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="subviews">
-                                <include reference="86x-YL-Z60"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Barcelona" id="W4Y-1T-RmZ">
                         <barButtonItem key="rightBarButtonItem" title="Message" id="jv0-VP-lSL">
@@ -151,6 +153,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5U4-BU-Rho" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="178.5" y="500"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="GjH-pW-H6L">
+            <objects>
+                <viewController id="nN5-MD-F3j" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GS6-pS-xwC"/>
+                        <viewControllerLayoutGuide type="bottom" id="APX-G9-Ig0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xuh-0U-3oo">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="efa-dG-JwZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
